[project]
name = "runpod_tools"
version = "0.0.1"
description = "Tool to submit Dockerized jobs to RunPod via python."
dependencies = ["runpod>=1.0.0"]
optional-dependencies = { dev = ["prek", "ruff", "ty"], "test" = ["pytest"] }
requires-python = ">=3.10"

[build-system]
requires = ["uv_build>=0.11.0,<0.12"]
build-backend = "uv_build"
